Bug 43820 - arts crashes when loading & using artsbuilder and noatun
Summary: arts crashes when loading & using artsbuilder and noatun
Status: RESOLVED FIXED
Alias: None
Product: arts
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Arnold Krille
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-06-11 21:33 UTC by frank.dekervel
Modified: 2021-09-30 11:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description frank.dekervel 2002-06-11 21:20:57 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           arts
Version:           KDE 3.0.5 (CVS HEAD >= 20020427)
Severity:          normal
Installed from:    compiled sources
Compiler:          gcc version 2.95.4 20011002 (Debian prerelease)
OS:                Linux (i686) release 2.4.18-rc4
OS/Compiler notes: 

i made an arts structure (in arts builder) with a Synth_AMAN_PLAY and a 
Synth_BUS_DOWNLINK and i connected the bus to the play object. i gave the bus a name (foo) and i loaded the structure in arts.
now i started noatun and started a song.
after that i started arts control and connected the noatun output to the bus foo. the (unnamed) artscontrol output was to the soundcard.
when i did this arts crashed and was restarted by noatun.

(Submitted via bugs.kde.org)
(Called from KBugReport dialog. Fields Application manually changed)
Comment 1 Arnold Krille 2003-02-17 17:07:12 UTC
Is this still an issue in the latest release? 
Comment 2 frank.dekervel 2003-02-17 19:03:21 UTC
Subject: Re:  arts crashes when loading & using artsbuilder and noatun

Op Monday 17 February 2003 17:07, schreef u:
> ------- You are receiving this mail because: -------
> You reported the bug, or are watching the reporter.
>
> http://bugs.kde.org/show_bug.cgi?id=43820
>
>
>
>
> ------- Additional Comments From arnold@arnoldarts.de  2003-02-17 17:07
> ------- Is this still an issue in the latest release?

argh, i tried to reproduce now, but i was unable to reproduce. i was also 
unable to connect noatun (the 'foo' input did not appear).
seems my bugreport was not that clear after all :(, so i think its the best to 
close this bug... i'll attach a better description if i can reproduce/test it 
with success again.

greetings,
frank



Comment 3 Arnold Krille 2003-02-17 20:15:39 UTC
Which version are you using now? still CVS-HEAD? 
 
Arnold 
Comment 4 frank.dekervel 2003-02-17 21:40:16 UTC
Subject: Re:  arts crashes when loading & using artsbuilder and noatun

Op Monday 17 February 2003 20:15, schreef Arnold Krille:
> Which version are you using now? still CVS-HEAD?

no, the latest release (3.1) - ralph nolden gcc2.95 debian packages.
i tried it again, and now i can reproduce i think:

the objective of my 'experiment' was to be able to reroute sound trough 
artsbuilder so i could use effects and stuff (or do other nice things).

artsbuilder:
	BUS_DOWNLINK(foo) -> SYN_AMAN_PLAY(woele)
	run/execute structure
noatun:
	start noatun
artscontrol:
	i see two outputs, one from noatun, and one from artsbuilder (woele)
	i double-click on noatun output. i can choose between out_soundcard and foo
	now. i choose 'foo'.

everything hangs for a while, and then seems to recover. the noatun output is 
still on out_soundcard, and when i double-click again, both 
out_soundcard and foo options are gone. the .xsession-errors output below
suggest that artsd was restarted. i see no drkonqui dialogs tho.


greetings,
frank


-------------------snipsnip

mcop warning: user defined signal handler found for SIG_PIPE, overriding
new GUI_AUDIO_MANAGER
mcop warning: user defined signal handler found for SIG_PIPE, overriding
kdecore (KAccel): WARNING: Sym::initQt( ffff ): failed to convert key.
kwin: X_SetInputFocus(0x4000002): BadMatch (invalid parameter attributes)
WARNING: KDE detected X Error: BadDrawable (invalid Pixmap or Window parameter) \x09
  Major opcode:  \x0e
WARNING: KDE detected X Error: BadDrawable (invalid Pixmap or Window parameter) \x09
  Major opcode:  \x0e
warning: leaving MCOP Dispatcher and still 2 object references alive.
  - Arts::PortDesc
  - Arts::PortDesc
warning: leaving MCOP Dispatcher and still 4 types alive.
QClipboard: Unknown SelectionNotify event received
mcop warning: user defined signal handler found for SIG_PIPE, overriding
new GUI_AUDIO_MANAGER
mcop warning: user defined signal handler found for SIG_PIPE, overriding
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
kwin: X_SetInputFocus(0x4c00080): BadMatch (invalid parameter attributes)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
There are already artsd objects registered, looking if they are active...
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
unix_connect: can't connect to server (unix:/tmp/mcop-kervel/bakvis-03f3-3e5084dc)
tcp_connect: can't connect to server (tcp:bakvis:32773)
... cleaned 5 unused mcop global references.

Can't set real-time scheduling priority.
You need to run artswrapper as root or
setuid root. This means that you will
likely not be able to produce acceptable
sound (i.e. without clicks and breaks).


greetings,
frank

Comment 5 Arnold Krille 2003-02-18 15:00:03 UTC
Not god while testing I got the same error. 
 
Seems to be a bug... 
Comment 6 Stefan Gehn 2004-04-29 09:58:43 UTC
May I mention that noatun has a dialog to add arts-effects? Not that this fixes the original bugreport but I don't see why you want to do it the complicated way if there's an easy one :)
Comment 7 George Goldberg 2007-12-18 05:16:09 UTC
Since arts is dead and replaced by phonon as of KDE 4, and there is a workaround for this bug in noatun (it seems to me), I am closing this as WONTFIX. Please reopen if you think this is not the right course of action.
Comment 8 Aleix Pol 2021-09-30 11:01:40 UTC
Git commit cea26ce3fd2af9f7edbda62e7a3efe5f481bdd07 by Aleix Pol.
Committed on 30/09/2021 at 00:10.
Pushed by apol into branch 'master'.

Do not mark jobs that have been aborted as errored

We even provide API to do so through BaseJob::abort(), it clearly isn't
an error, much less a NetworkError.

Instead, provide API to check that it indeed was aborted in case it's
necessary when checking the result of the job in case it's necessary.

M  +6    -1    src/atticabasejob.cpp
M  +7    -0    src/atticabasejob.h

https://invent.kde.org/frameworks/attica/commit/cea26ce3fd2af9f7edbda62e7a3efe5f481bdd07