Do not mark jobs that have been aborted as errored

We even provide API to do so through BaseJob::abort(), it clearly isn't
an error, much less a NetworkError.

Instead, provide API to check that it indeed was aborted in case it's
necessary when checking the result of the job in case it's necessary.

BUG: 43820